--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-    <H1>Emmanuel Vochaitis</H1>
-    <H2>Senior Software Developer</H2>
-    <H3>Toronto Ontario</H3>
+    <!-- <H1>Emmanuel Vochaitis</H1> -->
+    <!-- <H2>Senior Software Developer</H2> -->
+    <!-- <H3>Toronto Ontario</H3> -->
     <div id="container">
-        <!-- <div id="offset"> -->
+        <div id="bgs"></div>
         <div id="origin">
-            <div id="grid"></div>
+            <!-- <div id="grid"></div> -->
             <p>
                 <span>Hello there!</span>
                 <span>I am Emmanuel</span>
@@ -32,7 +32,8 @@
             </div>
             <p id="b" class="ddd label">B</p>
             <p id="c" class="ddd label">C</p> -->
-            <div id="spacers">
+            <div id="fgs"></div>
+            <!-- <div id="spacers">
                 <div class="spacers" style="transform: translate3d(-50px, -50px, -50px);"></div>
                 <div class="spacers" style="transform: translate3d(50px, -50px, -50px);"></div>
                 <div class="spacers" style="transform: translate3d(50px, 50px, -50px);"></div>
@@ -41,7 +42,7 @@
                 <div class="spacers" style="transform: translate3d(50px, -50px, 50px);"></div>
                 <div class="spacers" style="transform: translate3d(50px, 50px, 50px);"></div>
                 <div class="spacers" style="transform: translate3d(-50px, 50px, 50px);"></div>
-            </div>
+            </div> -->
         </div>
         <!-- </div> -->
     </div>
