--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Emmanuel</title>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -14,37 +15,52 @@
     <div id="container">
         <div id="bgs"></div>
         <div id="origin">
-            <!-- <div id="grid"></div> -->
-            <p>
-                <span>Hello there!</span>
-                <span>I am Emmanuel</span>
-                <span>a Senior Software Developer</span>
-                <span>that makes thisgs</span>
-                <span>Awesome</span>
-            </p>
-            <!-- <div id='dddNoChild' class="ddd">dddNoChild</div> -->
-            <!-- <div id="dddWithChildren" class="ddd">
-                <div class="dddContainer">
-                    <p>ddd</p>
-                    <p>WITH</p>
-                    <p>CHildren</p>
+            <div id="camera">
+                <div id="world">
+                    <div id="grid"></div>
+                    <p id="text">
+                        <span id="hello">Hello</span>
+                        <span id="there"> there!</span>
+                        <span id="iam">I&nbspam</span>
+                        <span id="eme">
+                            <span>E</span>
+                            <span>m</span>
+                            <span>m</span>
+                            <span>a</span>
+                            <span>n</span>
+                            <span>u</span>
+                            <span>e</span>
+                            <span>l</span>
+                        </span>
+                        <!-- <span id="a">a</span> -->
+                        <!-- <span id="software">Software</span> -->
+                        <!-- <span id="developer">Developer</span> -->
+                        <!-- <span id="make">that </span> -->
+                        <!-- <span id="makes">makes </span> -->
+                        <!-- <span id="thisgs">thisgs</span> -->
+                        <!-- <span id="awesome">Awesome</span> -->
+                    </p>
+                    <!-- <div id='dddNoChild' class="ddd">dddNoChild</div> -->
+                    <!-- <div id="dddWithChildren" class="ddd"> -->
+                    <!-- <div class="dddContainer"> -->
+                    <!-- <p>ddd</p> -->
+                    <!-- <p>WITH</p> -->
+                    <!-- <p>CHildren</p> -->
+                    <!-- </div> -->
+                    <div id="spacers">
+                        <div class="spacers" style="transform: translate3d(-50px, -50px, -50px);"></div>
+                        <div class="spacers" style="transform: translate3d(50px, -50px, -50px);"></div>
+                        <div class="spacers" style="transform: translate3d(50px, 50px, -50px);"></div>
+                        <div class="spacers" style="transform: translate3d(-50px, 50px, -50px);"></div>
+                        <div class="spacers" style="transform: translate3d(-50px, -50px, 50px);"></div>
+                        <div class="spacers" style="transform: translate3d(50px, -50px, 50px);"></div>
+                        <div class="spacers" style="transform: translate3d(50px, 50px, 50px);"></div>
+                        <div class="spacers" style="transform: translate3d(-50px, 50px, 50px);"></div>
+                    </div>
                 </div>
             </div>
-            <p id="b" class="ddd label">B</p>
-            <p id="c" class="ddd label">C</p> -->
-            <div id="fgs"></div>
-            <!-- <div id="spacers">
-                <div class="spacers" style="transform: translate3d(-50px, -50px, -50px);"></div>
-                <div class="spacers" style="transform: translate3d(50px, -50px, -50px);"></div>
-                <div class="spacers" style="transform: translate3d(50px, 50px, -50px);"></div>
-                <div class="spacers" style="transform: translate3d(-50px, 50px, -50px);"></div>
-                <div class="spacers" style="transform: translate3d(-50px, -50px, 50px);"></div>
-                <div class="spacers" style="transform: translate3d(50px, -50px, 50px);"></div>
-                <div class="spacers" style="transform: translate3d(50px, 50px, 50px);"></div>
-                <div class="spacers" style="transform: translate3d(-50px, 50px, 50px);"></div>
-            </div> -->
         </div>
-        <!-- </div> -->
+        <div id="fgs"></div>
     </div>
     <script src="./index.ts"></script>
 </body>
