--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div id="origin">
             <div id="camera">
                 <div id="world">
-                    <div id="grid"></div>
+                    <!-- <div id="grid"></div> -->
                     <p id="text">
                         <span id="hello">Hello</span>
                         <span id="there"> there!</span>
@@ -32,9 +32,12 @@
                             <span>e</span>
                             <span>l</span>
                         </span>
-                        <!-- <span id="a">a</span> -->
-                        <!-- <span id="software">Software</span> -->
-                        <!-- <span id="developer">Developer</span> -->
+                        <span id="a">a&nbspSenior</span>
+                        <span id="software">Software</span>
+                        <span id="dev">Developer</span>
+                        <!-- <span id="a">a&nbspGeek</span> -->
+                        <!-- <span id="by">by</span> -->
+                        <!-- <span id="nature">nature</span> -->
                         <!-- <span id="make">that </span> -->
                         <!-- <span id="makes">makes </span> -->
                         <!-- <span id="thisgs">thisgs</span> -->
