--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emmanuel</title>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./colors.css">
+
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="manifest.json">
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Web Starter Kit">
+    <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#2F3BA2">
+    <!-- Color the status bar on mobile devices -->
+    <meta name="theme-color" content="#2F3BA2">
+
+
 </head>
 
 <body>
@@ -14,33 +37,47 @@
     <!-- <H3>Toronto Ontario</H3> -->
     <div id="container">
         <div id="bgs"></div>
+        <!-- <svg >
+            <circle cx="50%" cy="50%" r="40" stroke="black" fill="red" />
+          </svg> -->
         <div id="origin">
             <div id="camera">
                 <div id="world">
                     <!-- <div id="grid"></div> -->
                     <p id="text">
-                        <span id="hello">Hello</span>
-                        <span id="there"> there!</span>
-                        <span id="iam">I&nbspam</span>
-                        <span id="eme">
-                            <span>E</span>
-                            <span>m</span>
-                            <span>m</span>
-                            <span>a</span>
-                            <span>n</span>
-                            <span>u</span>
-                            <span>e</span>
-                            <span>l</span>
+                        <span id="seq1" class="ddd">
+                            <span id="hello">Hello</span>
+                            <span> </span>
+                            <span id="there"class='fg-grey-200' >there!</span>
                         </span>
-                        <span id="a">a&nbspSenior</span>
-                        <span id="software">Software</span>
-                        <span id="dev">Developer</span>
-                        <!-- <span id="a">a&nbspGeek</span> -->
-                        <!-- <span id="by">by</span> -->
-                        <!-- <span id="nature">nature</span> -->
-                        <!-- <span id="make">that </span> -->
-                        <!-- <span id="makes">makes </span> -->
-                        <!-- <span id="thisgs">thisgs</span> -->
+                        <span id="seq2"class="ddd">
+                            <span id="iam">I&nbspam</span>
+                            <span id="eme">
+                                <span>E</span>
+                                <span>m</span>
+                                <span>m</span>
+                                <span>a</span>
+                                <span>n</span>
+                                <span>u</span>
+                                <span>e</span>
+                                <span>l</span>
+                            </span>
+                        </span>
+                        <span id="seq3"class="ddd">
+                            <span id="a">a&nbspSenior</span>
+                            <span id="software">Software</span>
+                            <span id="dev">Developer</span>
+                        </span>
+                        <span id="seq4"class="ddd">
+                            <span id="ageek">@</span>
+                            <span id="geek">geek</span>
+                            <span id="by">by</span>
+                            <span id="nature">nature</span>
+                        </span>
+                        <!-- <span id="with">With</span> -->
+                        <!-- <span id="an">an</span> -->
+                        <!-- <span id="animation">animation</span> -->
+                        <!-- <span id="background">background</span> -->
                         <!-- <span id="awesome">Awesome</span> -->
                     </p>
                     <!-- <div id='dddNoChild' class="ddd">dddNoChild</div> -->
@@ -50,7 +87,7 @@
                     <!-- <p>WITH</p> -->
                     <!-- <p>CHildren</p> -->
                     <!-- </div> -->
-                    <div id="spacers">
+                    <!-- <div id="spacers">
                         <div class="spacers" style="transform: translate3d(-50px, -50px, -50px);"></div>
                         <div class="spacers" style="transform: translate3d(50px, -50px, -50px);"></div>
                         <div class="spacers" style="transform: translate3d(50px, 50px, -50px);"></div>
@@ -59,13 +96,25 @@
                         <div class="spacers" style="transform: translate3d(50px, -50px, 50px);"></div>
                         <div class="spacers" style="transform: translate3d(50px, 50px, 50px);"></div>
                         <div class="spacers" style="transform: translate3d(-50px, 50px, 50px);"></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
         <div id="fgs"></div>
     </div>
     <script src="./index.ts"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <!-- <script>
+        (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-XXXXX-X', 'auto');
+        ga('send', 'pageview');
+    </script> -->
+    <!-- Built with love using Web Starter Kit -->
 </body>
 
 </html>
