--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,12 @@
                             <span id="by">by</span>
                             <span id="nature">nature</span>
                         </span>
+                        <span id="seq5"class="ddd">
+                                <span id="artist">artist</span>
+                                <span id="byheart">by</span>
+                                <span id="heart">heart</span>
+                                <div id="spinners"></div>
+                        </span>
                         <!-- <span id="with">With</span> -->
                         <!-- <span id="an">an</span> -->
                         <!-- <span id="animation">animation</span> -->
