seperate spinner jutter

--- a/src/index.html
+++ b/src/index.html
@@ -36,10 +36,8 @@
     <!-- <H2>Senior Software Developer</H2> -->
     <!-- <H3>Toronto Ontario</H3> -->
     <div id="container">
+        <div id="timeline"></div>
         <div id="bgs"></div>
-        <!-- <svg >
-            <circle cx="50%" cy="50%" r="40" stroke="black" fill="red" />
-          </svg> -->
         <div id="origin">
             <div id="camera">
                 <div id="world">
@@ -69,16 +67,20 @@
                             <span id="dev">Developer</span>
                         </span>
                         <span id="seq4"class="ddd">
-                            <span id="ageek">@</span>
+                            <span id="ageek">a</span>
                             <span id="geek">geek</span>
                             <span id="by">by</span>
                             <span id="nature">nature</span>
                         </span>
                         <span id="seq5"class="ddd">
-                                <span id="artist">artist</span>
-                                <span id="byheart">by</span>
-                                <span id="heart">heart</span>
-                                <div id="spinners"></div>
+                            <div id='spinnersSpin'class="ddd">
+                                <!-- <div style='transform:scale(10)'class="ddd"> -->
+                                    <div id="spinners"class="ddd"></div>
+                                <!-- </div> -->
+                            </div>
+                            <span id="creative">creative</span>
+                            <span id="byheart">by</span>
+                            <span id="heart">heart</span>
                         </span>
                         <!-- <span id="with">With</span> -->
                         <!-- <span id="an">an</span> -->
