--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="manifest.json">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Web Starter Kit">
+    <meta name="application-name" content="Emmanuel gr">
     <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,9 +24,9 @@
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#2F3BA2">
+    <meta name="msapplication-TileColor" content="#FFE082">
     <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#2F3BA2">
+    <meta name="theme-color" content="#FFE082">
 
 
 </head>
@@ -81,12 +81,16 @@
                             <span id="creative">creative</span>
                             <span id="byheart">by</span>
                             <span id="heart">heart</span>
+                            <svg>
+                            </svg>
                         </span>
-                        <!-- <span id="with">With</span> -->
-                        <!-- <span id="an">an</span> -->
-                        <!-- <span id="animation">animation</span> -->
-                        <!-- <span id="background">background</span> -->
+                        <!-- <span id="contact">contact</span> -->
+                        <!-- <span id="me">me</span> -->
+                        <!-- <span id="for">for</span> -->
                         <!-- <span id="awesome">Awesome</span> -->
+                        <!-- <span id="web">web</span> -->
+                        <!-- <span id="android">android</span> -->
+                        <!-- <span id="unity">unity</span> -->
                     </p>
                     <!-- <div id='dddNoChild' class="ddd">dddNoChild</div> -->
                     <!-- <div id="dddWithChildren" class="ddd"> -->
