--- a/src/index.html
+++ b/src/index.html
@@ -20,129 +20,87 @@
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <meta name="apple-mobile-web-app-title" content="Emmanuel.gr">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#FFE082">
     <!-- Color the status bar on mobile devices -->
     <meta name="theme-color" content="#FFE082">
-
-
 </head>
 
 <body>
-    <!-- <H1>Emmanuel Vochaitis</H1> -->
-    <!-- <H2>Senior Software Developer</H2> -->
-    <!-- <H3>Toronto Ontario</H3> -->
     <div id="container">
-        <div id="timeline"></div>
-        <div id="bgs"></div>
-        <div id="origin">
-            <div id="camera">
-                <div id="world">
-                    <!-- <div id="grid"></div> -->
-                    <p id="text">
-                        <span id="seq1" class="ddd">
-                            <span id="hello">Hello</span>
-                            <span> </span>
-                            <span id="there" class='fg-grey-200'>there!</span>
-                        </span>
-                        <span id="seq2" class="ddd">
-                            <span id="iam">I&nbspam</span>
-                            <span id="eme">
-                                <span>E</span>
-                                <span>m</span>
-                                <span>m</span>
-                                <span>a</span>
-                                <span>n</span>
-                                <span>u</span>
-                                <span>e</span>
-                                <span>l</span>
-                            </span>
-                        </span>
-                        <span id="seq3" class="ddd">
-                            <span id="a">a&nbspSenior</span>
-                            <span id="software">Software</span>
-                            <span id="dev">Developer</span>
-                        </span>
-                        <span id="seq4" class="ddd">
-                            <span id="ageek">a</span>
-                            <span id="geek">geek</span>
-                            <span id="by">by</span>
-                            <span id="nature">nature</span>
-                        </span>
-                        <span id="seq5" class="ddd">
-                            <div id='spinnersSpin' class="ddd">
-                                <!-- <div style='transform:scale(10)'class="ddd"> -->
-                                <div id="spinners" class="ddd"></div>
-                                <!-- </div> -->
-                            </div>
-                            <span id="creative">creative</span>
-                            <span id="byheart">by</span>
-                            <span id="heart">heart</span>
-                            <svg>
-                            </svg>
-                        </span>
-                        <!-- <span id="contact">contact</span> -->
-                        <!-- <span id="me">me</span> -->
-                        <!-- <span id="for">for</span> -->
-                        <!-- <span id="awesome">Awesome</span> -->
-                        <!-- <span id="web">web</span> -->
-                        <!-- <span id="android">android</span> -->
-                        <!-- <span id="unity">unity</span> -->
-                    </p>
-                    <!-- <div id='dddNoChild' class="ddd">dddNoChild</div> -->
-                    <!-- <div id="dddWithChildren" class="ddd"> -->
-                    <!-- <div class="dddContainer"> -->
-                    <!-- <p>ddd</p> -->
-                    <!-- <p>WITH</p> -->
-                    <!-- <p>CHildren</p> -->
-                    <!-- </div> -->
-                    <!-- <div id="spacers">
-                        <div class="spacers" style="transform: translate3d(-50px, -50px, -50px);"></div>
-                        <div class="spacers" style="transform: translate3d(50px, -50px, -50px);"></div>
-                        <div class="spacers" style="transform: translate3d(50px, 50px, -50px);"></div>
-                        <div class="spacers" style="transform: translate3d(-50px, 50px, -50px);"></div>
-                        <div class="spacers" style="transform: translate3d(-50px, -50px, 50px);"></div>
-                        <div class="spacers" style="transform: translate3d(50px, -50px, 50px);"></div>
-                        <div class="spacers" style="transform: translate3d(50px, 50px, 50px);"></div>
-                        <div class="spacers" style="transform: translate3d(-50px, 50px, 50px);"></div>
-                    </div> -->
-                </div>
-            </div>
+        <div id="bgs">
+            <div id="bgColor"></div>
+        </div>
+        <div id="world">
+            <p id="text">
+                    <span id="hello">Hello</span>
+                    <span> </span>
+                    <span id="there" class='fg-grey-200'>&nbspthere!</span>
+                    <span id="iam">I&nbspam</span>
+                    <span id="eme">
+                        <span>E</span><span>m</span><span>m</span><span>a</span><span>n</span><span>u</span><span>e</span><span>l</span>
+                    </span>
+                    <span id="votis">
+                        <span>V</span><span>o</span><span>c</span><span>h</span><span>a</span><span>i</span><span>t</span><span>i</span><span>s</span>
+                    </span>
+                    <span id="a">a&nbspSenior</span>
+                    <span id="software">&nbspSoftware</span>
+                    <span id="dev">&nbspDeveloper</span>
+                    <span id="ageek">a</span>
+                    <span id="geek">geek</span>
+                    <span id="by">by</span>
+                    <span id="nature">nature</span>
+                    <div id="creativeBy">
+                        <span id="creative">&nbspcreative</span>
+                        <span id="byheart">by</span>
+                        <span id="heart">&nbspheart</span>
+                    </div>
+                <!-- <span id="contact">contact</span> -->
+                <!-- <span id="me">me</span> -->
+                <!-- <span id="for">for</span> -->
+                <!-- <span id="awesome">Awesome</span> -->
+                <!-- <span id="web">web</span> -->
+                <!-- <span id="android">android</span> -->
+                <!-- <span id="unity">unity</span> -->
+            </p>
         </div>
         <div id="fgs"></div>
-    </div>
-    <script src="./index.ts"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <!-- <script>
-        (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-XXXXX-X', 'auto');
-        ga('send', 'pageview');
-    </script> -->
-    <!-- Built with love using Web Starter Kit -->
-    <div id="beta">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;" version="1.1" viewBox="0 0 30 40" xml:space="preserve">
-            <rect id="Artboard1" width="30" height="40" x="0" y="0" style="fill:none;"/>
-            <rect width="30" height="40" x="0" y="0" style="fill:#757575;"/>
-            <g>
-                <circle cx="15.205" cy="16.205" r="11.205" style="fill:#f9a825;"/>
-                <path d="M15.467,19.897c-1.077,0 -1.973,-0.477 -2.687,-1.429c0.031,0.279 0.057,0.505 0.078,0.675c0.02,0.171 0.041,0.327 0.062,0.466c0.02,0.14 0.046,0.275 0.077,0.404c0.031,0.13 0.068,0.287 0.109,0.474c0.073,0.31 0.13,0.587 0.171,0.831c0.041,0.243 0.062,0.437 0.062,0.582c0,0.559 -0.217,0.839 -0.652,0.839c-0.269,-0.011 -0.451,-0.081 -0.544,-0.21c-0.093,-0.129 -0.14,-0.329 -0.14,-0.598c0,-0.124 0.006,-0.259 0.016,-0.404c0.01,-0.145 0.026,-0.321 0.047,-0.528c0.01,-0.062 0.015,-0.129 0.015,-0.202c0,-0.072 0.005,-0.15 0.016,-0.233c0.041,-0.393 0.077,-0.735 0.108,-1.025c0.031,-0.289 0.06,-0.561 0.086,-0.815c0.026,-0.253 0.041,-0.502 0.046,-0.745c0.006,-0.244 0.008,-0.521 0.008,-0.831l-0.046,-3.727c-0.011,-0.88 0.121,-1.592 0.396,-2.136c0.274,-0.543 0.66,-0.929 1.157,-1.157c0.507,-0.217 1.019,-0.326 1.537,-0.326c0.518,0 0.978,0.202 1.382,0.606c0.404,0.435 0.606,0.932 0.606,1.491c0,0.921 -0.544,1.667 -1.631,2.236c0.269,0.104 0.52,0.243 0.753,0.419c0.233,0.176 0.469,0.389 0.707,0.637c0.249,0.269 0.435,0.554 0.559,0.854c0.124,0.3 0.187,0.632 0.187,0.994c0,0.694 -0.197,1.346 -0.591,1.957c-0.403,0.6 -1.035,0.901 -1.894,0.901Zm-2.687,-2.19c0.683,0.776 1.403,1.165 2.159,1.165c0.321,0 0.608,-0.07 0.862,-0.21c0.253,-0.14 0.484,-0.339 0.691,-0.598c0.403,-0.507 0.605,-1.015 0.605,-1.522c0,-0.497 -0.181,-0.901 -0.543,-1.211c-0.363,-0.331 -0.777,-0.497 -1.243,-0.497c-0.114,0.01 -0.235,0.023 -0.365,0.039c-0.129,0.015 -0.251,0.028 -0.365,0.039c-0.144,0 -0.266,-0.037 -0.364,-0.109c-0.099,-0.073 -0.169,-0.161 -0.21,-0.264c-0.042,-0.104 -0.055,-0.21 -0.039,-0.319c0.016,-0.108 0.065,-0.194 0.148,-0.256c0.124,-0.103 0.274,-0.155 0.45,-0.155c0.197,0 0.414,0.052 0.652,0.155c0.093,-0.021 0.202,-0.098 0.326,-0.233c0.125,-0.134 0.259,-0.321 0.404,-0.559c0.155,-0.269 0.277,-0.536 0.365,-0.8c0.088,-0.264 0.132,-0.515 0.132,-0.753c0,-0.756 -0.347,-1.134 -1.04,-1.134c-0.777,0 -1.393,0.435 -1.849,1.305c-0.248,0.455 -0.432,0.973 -0.551,1.553c-0.119,0.58 -0.184,1.237 -0.194,1.972l-0.031,2.392Z" style="fill-rule:nonzero;"/>
-            </g>
-            <g>
-                <path d="M5.368,35.85l2.268,0c1.26,0 2.268,-0.522 2.268,-1.728c0,-0.774 -0.414,-1.206 -1.242,-1.368l0,-0.036c0.684,-0.18 0.99,-0.756 0.99,-1.26c0,-1.152 -0.972,-1.458 -2.196,-1.458l-2.088,0l0,5.85Zm1.548,-3.546l0,-1.116l0.504,0c0.504,0 0.72,0.144 0.72,0.504c0,0.36 -0.216,0.612 -0.72,0.612l-0.504,0Zm0,2.358l0,-1.278l0.612,0c0.612,0 0.864,0.18 0.864,0.612c0,0.432 -0.252,0.666 -0.864,0.666l-0.612,0Z" style="fill-rule:nonzero;"/>
-                <path d="M10.498,35.85l4.068,0l0,-1.296l-2.52,0l0,-1.044l2.07,0l0,-1.296l-2.07,0l0,-0.918l2.43,0l0,-1.296l-3.978,0l0,5.85Z" style="fill-rule:nonzero;"/>
-                <path d="M16.618,35.85l1.548,0l0,-4.554l1.683,0l0,-1.296l-4.914,0l0,1.296l1.683,0l0,4.554Z" style="fill-rule:nonzero;"/>
-                <path d="M21.883,33.006c0.126,-0.558 0.279,-1.26 0.405,-1.854l0.036,0c0.126,0.594 0.297,1.296 0.423,1.854l0.09,0.405l-1.044,0l0.09,-0.405Zm-2.241,2.844l1.584,0l0.288,-1.242l1.602,0l0.288,1.242l1.638,0l-1.764,-5.85l-1.872,0l-1.764,5.85Z" style="fill-rule:nonzero;"/>
-            </g>
-        </svg>
-    </div>
+        <div id="spinners"></div>
+        <div id="timeline"></div>
+        <div id='time'>00</div>
+        <div id='playPause'></div>
+        <div id="beta">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;" version="1.1" viewBox="0 0 30 40" xml:space="preserve">
+                <rect id="Artboard1" width="30" height="40" x="0" y="0" style="fill:none;" />
+                <rect width="30" height="40" x="0" y="0" style="fill:#757575;" />
+                <g>
+                    <circle cx="15.205" cy="16.205" r="11.205" style="fill:#f9a825;" />
+                    <path d="M15.467,19.897c-1.077,0 -1.973,-0.477 -2.687,-1.429c0.031,0.279 0.057,0.505 0.078,0.675c0.02,0.171 0.041,0.327 0.062,0.466c0.02,0.14 0.046,0.275 0.077,0.404c0.031,0.13 0.068,0.287 0.109,0.474c0.073,0.31 0.13,0.587 0.171,0.831c0.041,0.243 0.062,0.437 0.062,0.582c0,0.559 -0.217,0.839 -0.652,0.839c-0.269,-0.011 -0.451,-0.081 -0.544,-0.21c-0.093,-0.129 -0.14,-0.329 -0.14,-0.598c0,-0.124 0.006,-0.259 0.016,-0.404c0.01,-0.145 0.026,-0.321 0.047,-0.528c0.01,-0.062 0.015,-0.129 0.015,-0.202c0,-0.072 0.005,-0.15 0.016,-0.233c0.041,-0.393 0.077,-0.735 0.108,-1.025c0.031,-0.289 0.06,-0.561 0.086,-0.815c0.026,-0.253 0.041,-0.502 0.046,-0.745c0.006,-0.244 0.008,-0.521 0.008,-0.831l-0.046,-3.727c-0.011,-0.88 0.121,-1.592 0.396,-2.136c0.274,-0.543 0.66,-0.929 1.157,-1.157c0.507,-0.217 1.019,-0.326 1.537,-0.326c0.518,0 0.978,0.202 1.382,0.606c0.404,0.435 0.606,0.932 0.606,1.491c0,0.921 -0.544,1.667 -1.631,2.236c0.269,0.104 0.52,0.243 0.753,0.419c0.233,0.176 0.469,0.389 0.707,0.637c0.249,0.269 0.435,0.554 0.559,0.854c0.124,0.3 0.187,0.632 0.187,0.994c0,0.694 -0.197,1.346 -0.591,1.957c-0.403,0.6 -1.035,0.901 -1.894,0.901Zm-2.687,-2.19c0.683,0.776 1.403,1.165 2.159,1.165c0.321,0 0.608,-0.07 0.862,-0.21c0.253,-0.14 0.484,-0.339 0.691,-0.598c0.403,-0.507 0.605,-1.015 0.605,-1.522c0,-0.497 -0.181,-0.901 -0.543,-1.211c-0.363,-0.331 -0.777,-0.497 -1.243,-0.497c-0.114,0.01 -0.235,0.023 -0.365,0.039c-0.129,0.015 -0.251,0.028 -0.365,0.039c-0.144,0 -0.266,-0.037 -0.364,-0.109c-0.099,-0.073 -0.169,-0.161 -0.21,-0.264c-0.042,-0.104 -0.055,-0.21 -0.039,-0.319c0.016,-0.108 0.065,-0.194 0.148,-0.256c0.124,-0.103 0.274,-0.155 0.45,-0.155c0.197,0 0.414,0.052 0.652,0.155c0.093,-0.021 0.202,-0.098 0.326,-0.233c0.125,-0.134 0.259,-0.321 0.404,-0.559c0.155,-0.269 0.277,-0.536 0.365,-0.8c0.088,-0.264 0.132,-0.515 0.132,-0.753c0,-0.756 -0.347,-1.134 -1.04,-1.134c-0.777,0 -1.393,0.435 -1.849,1.305c-0.248,0.455 -0.432,0.973 -0.551,1.553c-0.119,0.58 -0.184,1.237 -0.194,1.972l-0.031,2.392Z" style="fill-rule:nonzero;" />
+                </g>
+                <g>
+                    <path d="M5.368,35.85l2.268,0c1.26,0 2.268,-0.522 2.268,-1.728c0,-0.774 -0.414,-1.206 -1.242,-1.368l0,-0.036c0.684,-0.18 0.99,-0.756 0.99,-1.26c0,-1.152 -0.972,-1.458 -2.196,-1.458l-2.088,0l0,5.85Zm1.548,-3.546l0,-1.116l0.504,0c0.504,0 0.72,0.144 0.72,0.504c0,0.36 -0.216,0.612 -0.72,0.612l-0.504,0Zm0,2.358l0,-1.278l0.612,0c0.612,0 0.864,0.18 0.864,0.612c0,0.432 -0.252,0.666 -0.864,0.666l-0.612,0Z" style="fill-rule:nonzero;" />
+                    <path d="M10.498,35.85l4.068,0l0,-1.296l-2.52,0l0,-1.044l2.07,0l0,-1.296l-2.07,0l0,-0.918l2.43,0l0,-1.296l-3.978,0l0,5.85Z" style="fill-rule:nonzero;" />
+                    <path d="M16.618,35.85l1.548,0l0,-4.554l1.683,0l0,-1.296l-4.914,0l0,1.296l1.683,0l0,4.554Z" style="fill-rule:nonzero;" />
+                    <path d="M21.883,33.006c0.126,-0.558 0.279,-1.26 0.405,-1.854l0.036,0c0.126,0.594 0.297,1.296 0.423,1.854l0.09,0.405l-1.044,0l0.09,-0.405Zm-2.241,2.844l1.584,0l0.288,-1.242l1.602,0l0.288,1.242l1.638,0l-1.764,-5.85l-1.872,0l-1.764,5.85Z" style="fill-rule:nonzero;" />
+                </g>
+            </svg>
+        </div>
+        <script src="./index.ts"></script>
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+            ga('create', 'UA-8024535-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <!-- Built with love using Web Starter Kit -->
 </body>
 
 </html>
