--- a/src/index.html
+++ b/src/index.html
@@ -36,28 +36,26 @@
         </div>
         <div id="world">
             <p id="text">
-                    <span id="hello">Hello</span>
-                    <span> </span>
-                    <span id="there" class='fg-grey-200'>&nbspthere!</span>
+                <span id="hello">Hello</span>
+                <span> </span>
+                <span id="there" class='fg-grey-200'>&nbspthere!</span>
+                <span id="iamPapa">
                     <span id="iam">I&nbspam</span>
-                    <span id="eme">
-                        <span>E</span><span>m</span><span>m</span><span>a</span><span>n</span><span>u</span><span>e</span><span>l</span>
-                    </span>
-                    <span id="votis">
-                        <span>V</span><span>o</span><span>c</span><span>h</span><span>a</span><span>i</span><span>t</span><span>i</span><span>s</span>
-                    </span>
-                    <span id="a">a&nbspSenior</span>
-                    <span id="software">&nbspSoftware</span>
-                    <span id="dev">&nbspDeveloper</span>
-                    <span id="ageek">a</span>
-                    <span id="geek">geek</span>
-                    <span id="by">by</span>
-                    <span id="nature">nature</span>
-                    <div id="creativeBy">
-                        <span id="creative">&nbspcreative</span>
-                        <span id="byheart">by</span>
-                        <span id="heart">&nbspheart</span>
-                    </div>
+                    <span id="eme"><span>E</span><span>m</span><span>m</span><span>a</span><span>n</span><span>u</span><span>e</span><span>l</span></span>
+                </span>
+                <span id="votis"><span>V</span><span>o</span><span>c</span><span>h</span><span>a</span><span>i</span><span>t</span><span>i</span><span>s</span></span>
+                <span id="a">a&nbspSenior</span>
+                <span id="software">&nbspSoftware</span>
+                <span id="dev">&nbspDeveloper</span>
+                <span id="ageek">a</span>
+                <span id="geek">geek</span>
+                <span id="by">by</span>
+                <span id="nature">nature</span>
+                <div id="creativeBy">
+                    <span id="creative">&nbspcreative</span>
+                    <span id="byheart">by</span>
+                    <span id="heart">&nbspheart</span>
+                </div>
                 <!-- <span id="contact">contact</span> -->
                 <!-- <span id="me">me</span> -->
                 <!-- <span id="for">for</span> -->
@@ -69,7 +67,13 @@
         </div>
         <div id="fgs"></div>
         <div id="spinners"></div>
-        <div id="timeline"></div>
+    </div>
+        
+    <div id="timeline"></div>
+        <div id="scrolltainer">
+            <div id="scrolltent">
+            </div>
+        </div>
         <div id='time'>00</div>
         <div id='playPause'></div>
         <div id="beta">
@@ -88,19 +92,19 @@
                 </g>
             </svg>
         </div>
-        <script src="./index.ts"></script>
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-            ga('create', 'UA-8024535-1', 'auto');
-            ga('send', 'pageview');
-        </script>
-        <!-- Built with love using Web Starter Kit -->
+    <script src="./index.ts"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <!-- <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-8024535-1', 'auto');
+        ga('send', 'pageview');
+    </script> -->
+    <!-- Built with love using Web Starter Kit -->
 </body>
 
 </html>
