--- a/src/index.html
+++ b/src/index.html
@@ -82,26 +82,34 @@
         </div>
         <div id='time'>00</div>
         <div id='playPause'>
-                <svg fill="#000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <div class="svgWrapper">
+                <svg fill="#000000" viewBox="0 0 24 24">
                     <path d="M8 5v14l11-7z"/>
                     <path d="M0 0h24v24H0z" fill="none"/>
                 </svg>
+            </div>
         </div>
         <div id="beta">
-            <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                <path clip-rule="evenodd" d="M0 0h24v24H0z" fill="none"/>
-                <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/>
-            </svg>
-<h4>Beta</h4>
-<p>a WAPPI experiment</p>
-        </div>
-        <a id='emailme' href="mailto:reachoutemmanuel@gmail.com">Email Me
-                <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-                    <path d="M0 0h24v24H0z" fill="none"/>
+            <div class="svgWrapper">
+                <svg fill="#000000" viewBox="0 0 24 24">
+                    <path clip-rule="evenodd" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/>
                 </svg>
-        </a> 
-        
+            </div>
+            <h4>BETA</h4>
+            <p>&nbspa WAPPI experiment</p>
+        </div>
+        <a href="mailto:reachoutemmanuel@gmail.com">
+            <div id="emailme">
+                <div class="svgWrapper">
+                    <svg fill="#000000" viewBox="0 0 24 24">
+                        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
+                        <path d="M0 0h24v24H0z" fill="none" />
+                    </svg>
+                </div>
+                Email Me
+            </div>
+        </a>
     <script src="./index.ts"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
