--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
         <div id='time'>00</div>
         <div id='playPause'>
             <div class="svgWrapper">
-                <svg fill="#000000" viewBox="0 0 24 24">
+                <svg fill="#000000" viewBox="0 0 24 24" width="24px" height="24px">
                     <path d="M8 5v14l11-7z"/>
                     <path d="M0 0h24v24H0z" fill="none"/>
                 </svg>
@@ -91,7 +91,7 @@
         </div>
         <div id="beta">
             <div class="svgWrapper">
-                <svg fill="#000000" viewBox="0 0 24 24">
+                <svg fill="#000000" viewBox="0 0 24 24" width="24px" height="24px">
                     <path clip-rule="evenodd" d="M0 0h24v24H0z" fill="none"/>
                     <path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/>
                 </svg>
@@ -102,7 +102,7 @@
         <a href="mailto:reachoutemmanuel@gmail.com">
             <div id="emailme">
                 <div class="svgWrapper">
-                    <svg fill="#000000" viewBox="0 0 24 24">
+                    <svg fill="#000000" viewBox="0 0 24 24" width="24px" height="24px">
                         <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
                         <path d="M0 0h24v24H0z" fill="none" />
                     </svg>
