--- a/src/index.html
+++ b/src/index.html
@@ -57,18 +57,17 @@
             </p>
                 <section>
                     <p>
-                            <span id="hire">
-                                    <span id=hi>hi</span>
-                                    <span id="re">re</span>
-                                    <span id="me">me</span>
-                                </span>
-                                <span id='contactSection'>
-                                    <span>scroll</span>
-                                    <span>up</span>
-                                    <span>to</span>
-                                    <span>replay</span>
-                                </span>
-                    </p>
+                        <span id="hire">
+                                <span id=hi>hi</span>
+                                <span id="re">re</span>
+                                <span id="me">me</span>
+                        </span>
+                            <span id='outro'>
+                                <span>Lets</span>
+                                <span>Talk</span>
+                            </span>
+                        </p>
+                        <p id='scroll-up'>scroll up to replay</p>
                 </section>
             </div>
             <div id="fgs"></div>
@@ -87,7 +86,9 @@
         <a href="mailto:reachoutemmanuel@gmail.com">
             <div id="emailme">
                 <div class="svgWrapper">
-                    <svg viewBox="0 0 24 24">
+                    <svg viewBox="0 0 24 24" 
+                    width="100%"
+                    height="100%">
                         <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
                         <path d="M0 0h24v24H0z" fill="none" />
                     </svg>
