--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,28 @@
                 <span id="there" class='fg-grey-200'>&nbspthere!</span>
                 <span id="iamPapa">
                     <span id="iam">I&nbspam</span>
-                    <span id="eme"><span>E</span><span>m</span><span>m</span><span>a</span><span>n</span><span>u</span><span>e</span><span>l</span></span>
+                    <span id="eme">
+                        <span>E</span>
+                        <span>m</span>
+                        <span>m</span>
+                        <span>a</span>
+                        <span>n</span>
+                        <span>u</span>
+                        <span>e</span>
+                        <span>l</span>
+                    </span>
                 </span>
-                <span id="votis"><span>V</span><span>o</span><span>c</span><span>h</span><span>a</span><span>i</span><span>t</span><span>i</span><span>s</span></span>
+                <span id="votis">
+                    <span>V</span>
+                    <span>o</span>
+                    <span>c</span>
+                    <span>h</span>
+                    <span>a</span>
+                    <span>i</span>
+                    <span>t</span>
+                    <span>i</span>
+                    <span>s</span>
+                </span>
                 <span id="a">a&nbspSenior</span>
                 <span id="software">&nbspSoftware</span>
                 <span id="dev">&nbspDeveloper</span>
@@ -51,51 +70,46 @@
                 <span id="geek">geek</span>
                 <span id="by">by</span>
                 <span id="nature">nature</span>
-                <span id="creative">&nbspcreative</span>
-                <span id="byheart">by</span>
-                <span id="heart">&nbspheart</span>
+                <span id="creative-group">
+                    <span id="creative">&nbspcreative</span>
+                    <span id="byheart">by</span>
+                    <span id="heart">&nbspheart</span>
+                </span>
             </p>
-                <section>
-                    <p>
-                        <span id="hire">
-                                <span id=hi>hi</span>
-                                <span id="re">re</span>
-                                <span id="me">me</span>
-                        </span>
-                            <span id='outro'>
-                                <span>Lets</span>
-                                <span>Talk</span>
-                            </span>
-                        </p>
-                        <p id='scroll-up'>scroll up to replay</p>
-                </section>
-            </div>
-            <div id="fgs"></div>
-            <div id="spinners"></div>
+            <section>
+                <p>
+                    <span id="hire">
+                        <span id=hi>hi</span>
+                        <span id="re">re</span>
+                        <span id="me">me</span>
+                    </span>
+                    <span id='outro'>
+                        <span>Lets</span>
+                        <span>Talk</span>
+                    </span>
+                </p>
+                <p id='scroll-up'>scroll up to replay</p>
+            </section>
         </div>
-        
+        <div id="fgs"></div>
+        <div id="spinners"></div>
+    </div>
     <div id="timeline"></div>
-        <div id="scrolltainer">
-            <div id="scrolltent">
-            </div>
+    <div id="scrolltainer">
+        <div id="scrolltent">
         </div>
-        <div id='time'>00</div>
-        <div id="title">
-            <h4>BETA</h4>
-        </div>
-        <a href="mailto:reachoutemmanuel@gmail.com">
-            <div id="emailme">
-                <div class="svgWrapper">
-                    <svg viewBox="0 0 24 24" 
-                    width="100%"
-                    height="100%">
-                        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
-                        <path d="M0 0h24v24H0z" fill="none" />
-                    </svg>
-                </div>
-                Email Me
-            </div>
-        </a>
+    </div>
+    <div id='time'>00</div>
+    <div id="title">
+        <h4>BETA</h4>
+    </div>
+        <a id="emailme" href="mailto:emmanuelatwork@gmail.com">
+            <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
+                <path d="M0 0h24v24H0z" fill="none" />
+            </svg>
+    </a>
+    </div>
     <script src="./index.ts"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
