--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="A WAAPI experiment by Emmanuel Vochaitis">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emmanuel</title>
 
@@ -21,9 +21,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Emmanuel.gr">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#FFE082">
     <!-- Color the status bar on mobile devices -->
     <meta name="theme-color" content="#FFE082">
 </head>
@@ -52,8 +49,9 @@
                 <span id="software">Software</span>
                 <span id="dev">Developer</span>
                 <span id="ageek">a</span>
-                <span id="geek">geek</span>
-                <span id="by">by</span>
+                <span id="geek">
+                    <span class="geek">g</span><span class="geek">e</span><span class="geek">e</span><span class="geek">k</span><span id="by">by</span>
+                </span>
                 <span id="nature">nature</span>
                 <span id="creative-group">
                     <span id="creative">creative</span>
