--- a/prod/www/index.html
+++ b/prod/www/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="A WAAPI experiment by Emmanuel Vochaitis">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emmanuel</title>
 
     <link rel="stylesheet" href="ba9e693a36c416f546ed7bca280f62b9.css">
-    <link rel="stylesheet" href="50f24f90cd33c9a64159686dcbaf9e30.css">
 
     <!-- Web Application Manifest -->
     <link rel="manifest" href="78e0919d0812dc1251dff19649a3f234.js">
@@ -22,9 +21,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Emmanuel.gr">
     <link rel="apple-touch-icon" href="04cd08680835302efff92cfec776da9f.png">
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="248ecf685f683e64a62c6eaed5a36022.png">
-    <meta name="msapplication-TileColor" content="#FFE082">
     <!-- Color the status bar on mobile devices -->
     <meta name="theme-color" content="#FFE082">
 </head>
@@ -39,40 +35,26 @@
             <p id="text">
                 <span id="hello">Hello</span>
                 <span> </span>
-                <span id="there" class="fg-grey-200">&nbspthere!</span>
+                <span id="there">there!</span>
                 <span id="iamPapa">
                     <span id="iam">I&nbspam</span>
                     <span id="eme">
-                        <span>E</span>
-                        <span>m</span>
-                        <span>m</span>
-                        <span>a</span>
-                        <span>n</span>
-                        <span>u</span>
-                        <span>e</span>
-                        <span>l</span>
+                        <span>E</span><span>m</span><span>m</span><span>a</span><span>n</span><span>u</span><span>e</span><span>l</span>
                     </span>
                 </span>
                 <span id="votis">
-                    <span>V</span>
-                    <span>o</span>
-                    <span>c</span>
-                    <span>h</span>
-                    <span>a</span>
-                    <span>i</span>
-                    <span>t</span>
-                    <span>i</span>
-                    <span>s</span>
+                    <span>V</span><span>o</span><span>c</span><span>h</span><span>a</span><span>i</span><span>t</span><span>i</span><span>s</span>
                 </span>
                 <span id="a">a&nbspSenior</span>
-                <span id="software">&nbspSoftware</span>
-                <span id="dev">&nbspDeveloper</span>
+                <span id="software">Software</span>
+                <span id="dev">Developer</span>
                 <span id="ageek">a</span>
-                <span id="geek">geek</span>
-                <span id="by">by</span>
+                <span id="geek">
+                    <span class="geek">g</span><span class="geek">e</span><span class="geek">e</span><span class="geek">k</span><span id="by">by</span>
+                </span>
                 <span id="nature">nature</span>
                 <span id="creative-group">
-                    <span id="creative">&nbspcreative</span>
+                    <span id="creative">creative</span>
                     <span id="byheart">by</span>
                     <span id="heart">&nbspheart</span>
                 </span>
@@ -80,16 +62,14 @@
             <section>
                 <p>
                     <span id="hire">
-                        <span id="hi">hi</span>
-                        <span id="re">re</span>
+                        <span id="hi">hi</span><span id="re">re</span>
                         <span id="me">me</span>
                     </span>
                     <span id="outro">
-                        <span>Lets</span>
-                        <span>Talk</span>
+                        <span>Lets</span><span>Talk</span>
                     </span>
                 </p>
-                <p id="scroll-up">scroll up to replay</p>
+                <p id="scroll-up">scroll to replay</p>
             </section>
         </div>
         <div id="fgs"></div>
