--- a/prod/www/index.html
+++ b/prod/www/index.html
@@ -23,6 +23,7 @@
     <link rel="apple-touch-icon" href="04cd08680835302efff92cfec776da9f.png">
     <!-- Color the status bar on mobile devices -->
     <meta name="theme-color" content="#FFE082">
+    <style>html{background-color: black}</style>
 </head>
 
 <body>
@@ -90,6 +91,7 @@
                 <path d="M0 0h24v24H0z" fill="none"></path>
             </svg>
     </a>
+    
     
     <script src="08382234408ac2b57cd93cdd9b575baa.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
