--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
     <!-- Color the status bar on mobile devices -->
     <meta name="theme-color" content="#FFE082">
+    <style>html{background-color: black}</style>
 </head>
 
 <body>
